--- a/Wagner2Vek_Meistersinger.ipynb
+++ b/Wagner2Vek_Meistersinger.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Wagner2Vek: Die Meistersinger von Nürnberg\n",
-    "Word2Vecによる[楽劇「ニュルンベルクのマイスタージンガー」](https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%AB%E3%83%B3%E3%83%99%E3%83%AB%E3%82%AF%E3%81%AE%E3%83%9E%E3%82%A4%E3%82%B9%E3%82%BF%E3%83%BC%E3%82%B8%E3%83%B3%E3%82%AC%E3%83%BC)（リヒャルト・ワーグナー作曲）のドイツ語歌詞の解析"
+    "Word2Vecによる[楽劇「ニュルンベルクのマイスタージンガー」](https://ja.wikipedia.org/wiki/%E3%83%8B%E3%83%A5%E3%83%AB%E3%83%B3%E3%83%99%E3%83%AB%E3%82%AF%E3%81%AE%E3%83%9E%E3%82%A4%E3%82%B9%E3%82%BF%E3%83%BC%E3%82%B8%E3%83%B3%E3%82%AC%E3%83%BC)（リヒャルト・ワーグナー作曲のオペラ）のドイツ語歌詞の解析と関係性可視化の試み"
    ]
   },
   {
